--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -21,7 +21,7 @@
 			  <a class="nav-link" href="lessons/">Курсы</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Личный кабинет</a>
+			  <a class="nav-link" href="user/lk" tabindex="-1" aria-disabled="true">Личный кабинет</a>
 			</li>
 		  </ul>
 		  <form>
@@ -47,22 +47,21 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-9">
-					<h1 class="н1 text-light">Откуда ноги растут</h1>
+					<h1 class="н1 text-light mb-4">Откуда ноги растут</h1>
 					<p class="text-light">
-						Прежде чем появилась возможность создавать сайты, возник интернет и произошло это событие в 1990 году. Интернет без информации, представлял из себя совершенно бесполезное изобретение и его необходимо было наполнить. Именно этим и решил заняться его создатель <a href="https://ru.wikipedia.org/wiki/Бернерс-Ли,_Тим">Тимоти Бернерс-Ли</a>. Создавая сайт, Ти Бернерс-Ли задумывал его как некую "папку", в которой будут храниться самые основные сетевые документы, а объединять их будет личное доменное имя, оригинальное и единственное в своем роде. По-сути, именно такими сайты являются и на сегодняшний день, как старые, так и новые проекты, просто хранят в себе сгусток информации, различных страниц и документов, которые фактически принадлежат юридическому лицу, при этом находятся в свободном доступе для массы пользователей, а отыскать их можно под определенным доменным именем.
+						Создавать сайты стало возможно сразу же после появления интернета, который появился в 1990 году. Интернет тогда был пуст, и потому люди никак не могли его использовать. Чтобы это исправить, его надо было чем-то наполнить. Именно эту задачу взял на себя его создатель, <b>Тимоти Бернерс-Ли</b>. Первый сайт задумывался, как энная папка с документами, снабжённая уникальным доменным именем, по которому их можно будет найти. По-сути, любой сайт и по сей день имеет такую структуру: он просто хранят внутри себя информацию в том или ином виде, которая лежит в свободном доступе и может быть найдена по доменному имени.
 					</p>
 					<p class="text-light">
-						<b>6 августа 1991 года</b> в интернете появился самый первый во всех смыслах сайт, который располагался по электронному адресу info.cern.ch.
+						Так <b>6 августа 1991</b> года был размещён в пустом интернете самый первый в мире сайт. Располагался он по адресу info.cern.ch.
 					</p>
 					<p class="text-light">
-						Внешне первый сайт был невзрачен, что совершенно неудивительно. Он представлял собой сплошную стартовую страницу белого цвета, на которой для посетителей размещалась основная информация о инновационной технологии того времени "World Wide Web". Здесь же, на первом во всем мире сайте, были размещены и подробные инструкции по установке браузеров, а также серверов на свои персональные компьютеры, то есть технологию "WWW", можно смело назвать началом современного интернет-пространства, во всех его проявлениях.
+						Внешний вид первого сайта оставлял желать лучшего, и функционал был невелик, что понятно. Эта была просто белая страница, на которой была размещена информация про  технологию <b>«WWW»</b> (World Wide Web). В то время это была инновационная технология. Также с помощью этого сайта можно было установить браузер на свой пк.
 					</p>
 					<p class="text-light">
-						Первый русскоязычный сайт появился в интернете только в 1995 году, а вот более-менее активное развитие интернета в нашей стране началось только ближе к концу 90-х.
-					</p>
+						Первый сайт на русском языке был размещён в интернете спустя 4 года, однако сколько-нибудь активное развитие русского интернета началось лишь ближе к концу 90-х.					</p>
 				</div>
 				<div class="col-md-3 pt-5">
-					<img class="img-fluid img-thumbnail my-auto" src="{% static 'home/tim.jpg' %}">
+					<img class="img-fluid img-thumbnail my-auto mt-4" src="{% static 'home/tim.jpg' %}">
 				</div>
 			</div>
 		</div>
@@ -78,8 +77,8 @@
 	<div class="obl ">
 		<div class="container">
 			<h1 class="н1 text-light mt-5 ">Frontend-разработка</h1>
-			<p class="text-light mt-4">Это разработка пользовательского интерфейса и функций, которые работают на клиентской стороне веб-сайта или приложения. Это всё, что видит пользователь, открывая веб-страницу, и с чем он взаимодействует.</p>
-			<p class="text-light">Чтобы лучше понять, откройте страницу любого сайта — перед собой вы увидите интерфейс. Нажав Ctrl+Shift+I, вы откроете код страницы. Он описывает цвета, вёрстку, шрифты, расположение графических элементов и так далее.</p>
+			<p class="text-light mt-4">Это разработка всего того, что вы видите в окне браузера и с чем можете взаимодействовать, когда просматриваете какой-либо сайт. Функции бэкэнда не менее важны для работы сайта, но рядовой пользователь этого не замечает.</p>
+			<p class="text-light">Чтобы лучше понять, откройте в браузере любой сайт. Нажав Ctrl+Shift+I, вы откроете код страницы (панель разработчика). Он описывает цвета, шрифты, расположение элементов и т.д.</p>
 			<p class="text-light mb-4">Именно этому вы сможете научиться здесь.</p>
 			<img class="img-fluid mx-auto d-block" src="{% static 'home/logos.png' %}">
 		</div>
