--- a/lessons/templates/lessons/cssOb1/less-1.html
+++ b/lessons/templates/lessons/cssOb1/less-1.html
@@ -8,13 +8,16 @@
 	<div class="mx-auto mb-3 text-center px-1 py-5 rounded shadow jjk io">#1</div>
 	<div class="mx-auto mb-3 text-center px-1 py-5 rounded shadow text-light jjk-ost io" onclick="window.location.href = '../№2/';">#2</div>
 	<div class="mx-auto mb-3 text-center px-1 py-5 rounded shadow text-light jjk-ost io" onclick="window.location.href = '../№3/';">#3</div>
-<!--	<div class="mx-auto mb-3 text-center px-1 py-5 rounded shadow text-light jjk-ost" onclick="window.location.href = '../№4/';">#4</div>-->
+	<div class="mx-auto mb-3 text-center px-1 py-5 rounded shadow text-light jjk-ost" onclick="window.location.href = '../№4/';">#4</div>
 <!--	<div class="mx-auto mb-3 text-center px-1 py-5 rounded shadow text-light jjk-ost" onclick="window.location.href = '../№5/';">#5</div>-->
 <!--	<div class="mx-auto mb-3 text-center px-1 py-5 rounded shadow text-light jjk-ost" onclick="window.location.href = '../№6/';">#6</div>-->
 <!--	<div class="mx-auto mb-3 text-center px-1 py-5 rounded shadow text-light jjk-ost" onclick="window.location.href = '../№7/';">#7</div>-->
 {% endblock %}
 
 {% block body2 %}
+<p class="back-1">
+		<a class="back" href="../../../">WebSchool</a> > <a class="back" href="../../">Курсы</a> > <a class="back" href="../">CSS: основы</a> > <span>Куда писать стили</span>
+	</p>
 	<h1 class="h1 text-light">Куда писать стили</h1>
 	<h1 class="text-light fu"><b>link, href, rel</b></h1>
 	<p class="text-light">Устанавливает связь с внешним документом вроде файла со стилями или со шрифтами. Элемент <b>link</b> обычно размещается внутри контейнера <b>head</b></p>
@@ -22,7 +25,7 @@
 	<img class="img-fluid w-75 igm my-2" src="{% static 'lessons/2/1.png' %}">
 	<p class="text-light">Для html-страницы можно использовать несколько таблиц стилей. Таблицу соответственно можно использовать в нескольких html-файлах, чем она и отличается от тега <b>style</b></p>
 	<h1 class="text-light fu"><b>style</b></h1>
-	<p class="text-light">Этот тег пишется внутри head. Внутри него можно писать стили, которые будут пременены только для текущего документа.</p>
+	<p class="text-light">Этот тег обычно пишется внутри head, но это не обязательно. Он может располагаться в <b>body</b> или быть атрибутом любого тега. Внутри него можно писать стили, которые будут пременены только для текущего документа (элемента).</p>
 	<img class="img-fluid w-75 igm my-2" src="{% static 'lessons/2/2.png' %}">
 	<h2 class="h2 text-light">Селекторы</h2>
 	<p class="text-light">Запись стиля состоит из двух частей: элемента веб-страницы — селектора, и команды форматирования — блока объявления.</p>
@@ -39,7 +42,7 @@
 	<p class="text-light">В качестве селектора указывается название класса с точкой перед. Это позволит применить стиль ко всем элементам с таким классом. Также селектор можно задать для конкретных элементов с таким классом.</p>
 	<img class="img-fluid w-75 igm my-2" src="{% static 'lessons/2/6.png' %}">
 	<h3 class="h3 text-light">Селектор ID</h3>
-	<p class="text-light">Также как с классами, но через #.</p>
+	<p class="text-light">В качестве селектора указывается ID с # перед. Так же, как с классами, можно указать тип элемента.</p>
 	<img class="img-fluid w-75 igm my-2" src="{% static 'lessons/2/7.png' %}">
 	<h3 class="h3 text-light">Дочерний cелектор</h3>
 	<p class="text-light">Свойство применяется к определённым элементам внутри определённого элемента.</p>
