--- a/lessons/templates/lessons/cssOb1/less-3.html
+++ b/lessons/templates/lessons/cssOb1/less-3.html
@@ -5,16 +5,20 @@
 {% endblock %}
 
 {% block body1 %}
+
 	<div class="mx-auto mb-3 text-center px-1 py-5 rounded shadow text-light jjk-ost io" onclick="window.location.href = '../№1/';">#1</div>
 	<div class="mx-auto mb-3 text-center px-1 py-5 rounded shadow text-light jjk-ost io" onclick="window.location.href = '../№2/';">#2</div>
 	<div class="mx-auto mb-3 text-center px-1 py-5 rounded shadow jjk io">#3</div>
-<!--	<div class="mx-auto mb-3 text-center px-1 py-5 rounded shadow text-light jjk-ost" onclick="window.location.href = '../№4/';">#4</div>-->
+	<div class="mx-auto mb-3 text-center px-1 py-5 rounded shadow text-light jjk-ost" onclick="window.location.href = '../№4/';">#4</div>
 <!--	<div class="mx-auto mb-3 text-center px-1 py-5 rounded shadow text-light jjk-ost" onclick="window.location.href = '../№5/';">#5</div>-->
 <!--	<div class="mx-auto mb-3 text-center px-1 py-5 rounded shadow text-light jjk-ost" onclick="window.location.href = '../№6/';">#6</div>-->
 <!--	<div class="mx-auto mb-3 text-center px-1 py-5 rounded shadow text-light jjk-ost" onclick="window.location.href = '../№7/';">#7</div>-->
 {% endblock %}
 
 {% block body2 %}
+<p class="back-1">
+		<a class="back" href="../../../">WebSchool</a> > <a class="back" href="../../">Курсы</a> > <a class="back" href="../">CSS: основы</a> > <span>Фон и цвета</span>
+	</p>
 <h1 class="h1 text-light">Фон и цвета</h1>
 <h2 class="h2 text-light">Цвета в CSS</h2>
 <p class="text-light">В языке CSS, указать цвет можно тремя способами:</p>
@@ -64,7 +68,7 @@
 <img class="img-fluid w-75 igm my-2" src="{% static 'lessons/2/11.png' %}">
 <img class="img-fluid w-75 igm my-2" src="{% static 'lessons/2/10.png' %}">
 <p></p>
-<!--<button onclick="window.location.href = '../№4/';" class="btn no mb-3 px-4" role="button">Дальше</button>-->
-<button onclick="window.location.href = '../';" class="btn no mb-3 px-4" role="button">Завершить</button>
+<button onclick="window.location.href = '../№4/';" class="btn no mb-3 px-4" role="button">Дальше</button>
+
 
 {% endblock %}
