--- a/lessons/templates/lessons/cssOb1/test-3.html
+++ b/lessons/templates/lessons/cssOb1/test-3.html
@@ -10,5 +10,12 @@
 
 {% endblock %}
 {% block body2 %}
+<p class="back-1">
+		<a class="back" href="../../../">WebSchool</a> > <a class="back" href="../../">Курсы</a> > <a class="back" href="../">CSS: основы</a> > <span>Сложный тест</span>
+	</p>
+<div class="nach text-light text-center">
+	<h1 class="h1 mt-2">Скоро</h1>
+<!--	<button onclick="Start()" class="btn mx-auto btn-success mb-3 px-4" role="button">Начать</button>-->
 
+</div>
 {% endblock %}
