--- a/lessons/templates/lessons/htmlOb/les-11.html
+++ b/lessons/templates/lessons/htmlOb/les-11.html
@@ -18,6 +18,9 @@
 
 {% endblock %}
 {% block body2 %}
+<p class="back-1">
+		<a class="back" href="../../../">WebSchool</a> > <a class="back" href="../../">Курсы</a> > <a class="back" href="../">HTML</a> > <span>Полезные теги</span>
+	</p>
 	<h1 class="h1 text-light">Полезные теги форматирования текста</h1>
 	<h2 class="h2 text-light">Перенос строк</h2>
 	<h1 class="fu text-light"><b>br</b></h1>
