--- a/lessons/templates/lessons/htmlOb/les-3.html
+++ b/lessons/templates/lessons/htmlOb/les-3.html
@@ -18,6 +18,9 @@
 
 {% endblock %}
 {% block body2 %}
+<p class="back-1">
+		<a class="back" href="../../../">WebSchool</a> > <a class="back" href="../../">Курсы</a> > <a class="back" href="../">HTML</a> > <span>Адресация в HTML</span>
+	</p>
 	<h1 class="h1 text-light">Адресация в HTML</h1>
 	<p class="text-light">Основа основ интернета возможность быстро перемещаться от одного документа к другому. Мы кликаем на ссылку и вот перед нами уже совсем другая страница. Для размещения картинки или видеоролика на странице нужно указать ссылку на нужный медиа-файл, чтобы подключить таблицы стилей — ссылку на сss-файл.</p>
 	<p class="text-light">Что бы все ссылки работали правильно нужно правильно указать адрес документа (URL). Существует два типа адресации:</p>
@@ -41,7 +44,7 @@
 	<h2 class="h2 text-light">Корневая папка сайта</h2>
 	<p class="text-light"><b>Корневая папка сайта</b> — это главная или основная папка. В ней находятся файлы, обеспечивающие работоспособность сайта. Корневая папка сайта может быть единственной, когда сайт имеет простую структуру, но чаще она содержит другие вложенные папки и файлы.</p>
 	<p class="text-light">Корневая папка отличается от вложенных в нее папок тем, что именно в ней лежит html-файл главной страницы сайта.</p>
-	<p class="text-light">Файлу главной страницы сайта присваивают либо имя <b>index</b> (чаще всего), либо <b>default</b> (реже). </p>
+	<p class="text-light">Файлу главной страницы сайта нередко присваивают либо имя <b>index</b>, либо <b>default</b> (хотя это не принципиально). </p>
 	<p class="text-light">На самом деле, никто вас не заставляет структурировать сайт именно таким образом. Это просто общепринятая версия.</p>
 	<h2 class="h2 text-light">Относительный адрес</h2>
 	<p class="text-light"><b>Относительная адресация</b> применяется в случае, когда нужно сослаться с одного файла сайта на другой файл этого же сайта. Этот тип адресации используется намного чаще. </p>
