--- a/lessons/templates/lessons/htmlOb/les-4.html
+++ b/lessons/templates/lessons/htmlOb/les-4.html
@@ -18,6 +18,8 @@
 
 {% endblock %}
 {% block body2 %}
+<p class="back-1">
+		<a class="back" href="../../../">WebSchool</a> > <a class="back" href="../../">Курсы</a> > <a class="back" href="../">HTML</a> > <span>Списки</span>
 	<h1 class="h1 text-light">Списки</h1>
 	<h2 class="h2 text-light">Нумерованный (упорядоченный) список</h2>
 	<h1 class="text-light fu"><b>ol, li</b></h1>
