--- a/lessons/templates/lessons/htmlOb/les-5.html
+++ b/lessons/templates/lessons/htmlOb/les-5.html
@@ -18,6 +18,9 @@
 
 {% endblock %}
 {% block body2 %}
+<p class="back-1">
+		<a class="back" href="../../../">WebSchool</a> > <a class="back" href="../../">Курсы</a> > <a class="back" href="../">HTML</a> > <span>Изображения и ссылки</span>
+	</p>
 	<h1 class="h1 text-light">Изображения и ссылки</h1>
 	<h2 class="h2 text-light">Графические форматы</h2>
 	<p class="text-light"><b>Растровая графика</b> — изображение хранится в виде маленьких точек пикселей. Качество такой картинки ограничивается двумя факторами: размером картинки в пикселях (на экране) и разрешением изображения (её фактическим размером в пикселях).</p>
@@ -26,14 +29,14 @@
 	<h2 class="h2 text-light">Тег <b>img</b> и его атрибуты</h2>
 	<h1 class="fu text-light"><b>img, src, alt</b></h1>
 	<p class="text-light">Тег <b>img</b> и один из его обязательных атрибутов <b>src</b> используются для размещения изображения на странице. В атрибуте <b>src</b> yказывается URL изображения.</p>
-	<p class="text-light">Альтернативный текст (<b>аlt</b>) позволяет получить текстовую информацию о рисунке при отключенном в браузере показе картинок, во время их загрузки или для речевых браузеров.</p>
+	<p class="text-light">Альтернативный текст (<b>аlt</b>) позволяет получить текстовую информацию о рисунке при отключенном в браузере показе картинок, во время их загрузки или для речевых браузеров. Тег считается обязательным, но без него тоже будет работать.</p>
 	<img class="img-fluid w-75 igm my-2" src="{% static 'lessons/1/p5.png' %}">
 	<h1 class="fu text-light"><b>width, height</b></h1>
 	<p class="text-light">Для указания размеров рисунка у тега <b>img</b> предусмотрены атрибуты <b>width</b> (ширина) и <b>height</b> (высота). В качестве значения используются пиксели, при этом аргументы должны совпадать с физическими размерами картинки.</p>
 	<img class="img-fluid w-75 igm my-2" src="{% static 'lessons/1/p6.png' %}">
 	<h2 class="h2 text-light">Группировка изображений и подписей</h2>
 	<h1 class="fu text-light"><b>figure, figcaption</b></h1>
-	<p class="text-light">Тег <b>figure</b> используется для группирования любых элементов, например, изображений и подписей к ним. Как правило используется для иллюстраций, фрагментов кода, схем, графиком, диаграмм и т.п. </p>
+	<p class="text-light">Тег <b>figure</b> используется для группирования любых элементов, например, изображений и подписей к ним. Как правило, используется для иллюстраций, фрагментов кода, схем, графиком, диаграмм и т.п. </p>
 	<p class="text-light">Тег <b>figcaption</b> cодержит описание для элемента <b>figure</b>.</p>
 	<img class="img-fluid w-75 igm my-2" src="{% static 'lessons/1/p7.png' %}">
 	<h2 class="h2 text-light">Тег <b>а</b> и его атрибуты</h2>
