--- a/lessons/templates/lessons/htmlOb/les-6.html
+++ b/lessons/templates/lessons/htmlOb/les-6.html
@@ -18,6 +18,9 @@
 
 {% endblock %}
 {% block body2 %}
+<p class="back-1">
+		<a class="back" href="../../../">WebSchool</a> > <a class="back" href="../../">Курсы</a> > <a class="back" href="../">HTML</a> > <span>Разметка страницы</span>
+	</p>
 	<h1 class="h1 text-light">Разметка страницы</h1>
 	<h2 class="h2 text-light">Разделы страницы</h2>
 	<h1 class="fu text-light"><b>header</b></h1>
@@ -49,6 +52,8 @@
 	<p class=" text-light">Тег <b>div</b> не несет логической нагрузки. Этот тег используется для группировки других элементов html-страницы.</p>
 	<p class=" text-light">Рекомендуется использовать <b>div</b>, когда ни один другой элемент не подходит. </p>
 	<p class=" text-light">Элементы <b>div</b> могут пригодиться для стилистических целей.</p>
-	<button onclick="window.location.href = '../№7/';" class="btn no mb-3 px-4" role="button">Дальше</button>
+	<img class="img-fluid w-75 igm my-2" src="{% static 'lessons/1/-2.png' %}">
+	<p></p>
+<button onclick="window.location.href = '../№7/';" class="btn no mb-3 px-4" role="button">Дальше</button>
 
 {% endblock %}
