--- a/lessons/templates/lessons/htmlOb/les-8.html
+++ b/lessons/templates/lessons/htmlOb/les-8.html
@@ -18,6 +18,9 @@
 
 {% endblock %}
 {% block body2 %}
+<p class="back-1">
+		<a class="back" href="../../../">WebSchool</a> > <a class="back" href="../../">Курсы</a> > <a class="back" href="../">HTML</a> > <span>Формы</span>
+	</p>
 	<h1 class="h1 text-light">Формы</h1>
 	<h2 class="h2 text-light">Тег <b>form</b> и его атрибуты</h2>
 	<h1 class="fu text-light"><b>form</b></h1>
@@ -105,48 +108,69 @@
 	</ul>
 	<h2 class="h2 text-light">Атрибут <b>type</b></h2>
 	<p class=" text-light">Основной атрибут тега <b>input</b>, определяющий внешний вид элемента и
-	его поведение — <b>type</b>. Значения атрибута: </p>
+	его поведение. Значения атрибута: </p>
 	<h1 class="fu text-light"><b>button</b></h1>
+	<input type="button" class="form-control">
 	<p class="text-light">Простая кнопка</p>
 	<h1 class="fu text-light"><b>checkbox</b></h1>
+	<input type="checkbox">
 	<p class="text-light">Флажки</p>
 	<h1 class="fu text-light"><b>file</b></h1>
+	<input type="file" class="form-control">
 	<p class="text-light">Поле для загрузки файла</p>
 	<h1 class="fu text-light"><b>image</b></h1>
+	<input type="image" class="form-control">
 	<p class="text-light">Кнопка-картинка для отправки данных форм на сервер</p>
 	<h1 class="fu text-light"><b>password</b></h1>
+	<input type="password" class="form-control">
 	<p class="text-light">Поле для ввода пароля</p>
 	<h1 class="fu text-light"><b>radio</b></h1>
+	<input type="radio">
 	<p class="text-light">Переключатели</p>
 	<h1 class="fu text-light"><b>reset</b></h1>
+	<input type="reset" class="form-control">
 	<p class="text-light">Кнопка для возвращения данных формы в первоначальное значение</p>
 	<h1 class="fu text-light"><b>submit</b></h1>
+	<input type="submit" class="form-control">
 	<p class="text-light">Кнопка для отправки данных формы на сервер</p>
 	<h1 class="fu text-light"><b>text</b></h1>
+	<input type="text" class="form-control">
 	<p class="text-light">Текстовое поле</p>
 	<h1 class="fu text-light"><b>color</b></h1>
+	\<input type="color" class="form-control">
 	<p class="text-light">Виджет для выбора цвета</p>
 	<h1 class="fu text-light"><b>date</b></h1>
+	<input type="date" class="form-control">
 	<p class="text-light">Поле для выбора календарной даты</p>
 	<h1 class="fu text-light"><b>datetime-local</b></h1>
+	<input type="datetime-local" class="form-control">
 	<p class="text-light">Указание местной даты и времени</p>
 	<h1 class="fu text-light"><b>email</b></h1>
+	<input type="email" class="form-control">
 	<p class="text-light">Поле для адресов электронной почты</p>
 	<h1 class="fu text-light"><b>number</b></h1>
+	<input type="number" class="form-control">
 	<p class="text-light">Поле для ввода чисел</p>
 	<h1 class="fu text-light"><b>range</b></h1>
+	<input type="range" class="form-control">
 	<p class="text-light">Ползунок для выьора чисел в указанном диапозоне(<b>min</b>, <b>max</b>, <b>step</b>)</p>
 	<h1 class="fu text-light"><b>search</b></h1>
+	<input type="search" class="form-control">
 	<p class="text-light">Поле для поиска</p>
 	<h1 class="fu text-light"><b>tel</b></h1>
+	<input type="tel" class="form-control">
 	<p class="text-light">Поле для телефонных номеров</p>
 	<h1 class="fu text-light"><b>time</b></h1>
+	<input type="time" class="form-control">
 	<p class="text-light">Поле для времени</p>
 	<h1 class="fu text-light"><b>url</b></h1>
+	<input type="url" class="form-control">
 	<p class="text-light">Поле для веб-адресов</p>
 	<h1 class="fu text-light"><b>month</b></h1>
+	<input type="month" class="form-control">
 	<p class="text-light">Выбор месяца</p>
 	<h1 class="fu text-light"><b>week</b></h1>
+	<input type="week" class="form-control">
 	<p class="text-light">Выбор недели</p>
 	<h2 class="h2 text-light">Список возможных вариантов</h2>
 	<h1 class=" text-light"><b>datalist, list</b></h1>
