--- a/lessons/templates/lessons/lessons.html
+++ b/lessons/templates/lessons/lessons.html
@@ -21,7 +21,7 @@
 			  <a class="nav-link disabled" href="#">Курсы</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Личный кабинет</a>
+			  <a class="nav-link" href="../user/lk" tabindex="-1" aria-disabled="true">Личный кабинет</a>
 			</li>
 		  </ul>
 		  <form>
