--- a/lessons/templates/lessons/bootstrapOb.html
+++ b/lessons/templates/lessons/bootstrapOb.html
@@ -22,7 +22,7 @@
 			  <a class="nav-link" href="../">Курсы</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Личный кабинет</a>
+			  <a class="nav-link" href="../../user/lk" tabindex="-1" aria-disabled="true">Личный кабинет</a>
 			</li>
 		  </ul>
 		  <form>
