--- a/lessons/templates/lessons/cssOb1/test-1.html
+++ b/lessons/templates/lessons/cssOb1/test-1.html
@@ -10,5 +10,79 @@
 
 {% endblock %}
 {% block body2 %}
+<p class="back-1">
+		<a class="back" href="../../../">WebSchool</a> > <a class="back" href="../../">Курсы</a> > <a class="back" href="../">CSS: основы</a> > <span>Простой тест</span>
+	</p>
+<div class="nach text-light text-center">
+	<h1 class="h1 mb-3">Простой тест</h1>
+	<button onclick="Start()" class="btn mx-auto btn-success mb-3 px-4" role="button">Начать</button>
 
+</div>
+<style>
+.wrapper
+{
+    display: none;
+    height:85vh;
+}
+.button
+{
+   border: 0;
+   border-radius: 10px;
+   background: #5B406A;
+   color: #fff;
+   padding: 10px 25px;
+   width: 70%;
+   font-size: 15pt;
+   display: block;
+   margin: 2px auto;
+   margin-top: 16px;
+   cursor: pointer;
+}
+<!--.button:hover-->
+<!--{-->
+<!--    background: #8E377E;-->
+<!--}-->
+.button_wrong
+{
+   background: #EB6465;
+}
+
+.button_correct
+{
+   background: #5EB97D;
+}
+
+.button_passive
+{
+   background: #B3B3B3;
+}
+.head__content
+{
+
+    font-size:1.2em;
+}
+</style>
+<div class="wrapper ">
+   <main class="main">
+       <div class="quiz__head text-center panda py-2 mt-5 mx-auto rounded shadow">
+           <p class="head__content text-light mt-3" id="head">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ducimus odit accusamus, illum quas magni provident odio praesentium commodi sint, porro harum, minus cupiditate architecto culpa aut ex dolore officia.</p>
+       </div>
+       <div class="quiz__body">
+           <div class="buttons">
+               <div class="buttons__content" id="buttons">
+                   <button class="button text-light my-4 mx-2">Default button</button><br>
+                   <button class="button button_wrong text-light my-4 mx-2">Wrong answer</button><br>
+                   <button class="button button_correct text-light my-4 mx-2">Correct answer</button><br>
+                   <button class="button button_passive text-light my-4 mx-2">Unclicked button</button><br>
+               </div>
+           </div>
+
+           <div class="quiz__footer text-center mt-4">
+               <div class="footer__content text-light" id="pages">0 / 0</div>
+           </div>
+       </div>
+
+   </main>
+</div>
+<script src="{% static 'lessons/test110.js' %}"></script>
 {% endblock %}
