--- a/lessons/templates/lessons/htmlOb/les-1.html
+++ b/lessons/templates/lessons/htmlOb/les-1.html
@@ -22,14 +22,16 @@
 {% block body2 %}
 
 
-
+	<p class="back-1">
+		<a class="back" href="../../../">WebSchool </a> > <a class="back" href="../../"> Курсы </a> > <a class="back" href="../"> HTML </a>  >  <span>Понятие тега и атрибута</span>
+	</p>
 	<h1 class="h1 text-light">Понятие тега и атрибута</h1>
 	<p class="text-light">
 	Тег — команда, сообщающая браузеру о том, каким образом браузер должен отобразить данный фрагмент текста на экране. Название тега пишется в нижнем регистре.
 	</p>
 	<h3 class="h3 text-light">Открывающий и закрывающий тег</h3>
 	<img class="img-fluid w-75 igm my-2" src="{% static 'lessons/1/0.png' %}">
-	<h3 class="h3 text-light">Атрибут тега</h3>
+	<h3 class="h3 text-light">Атрибуты тега</h3>
 	<p class="text-light">Атрибуты предоставляют дополнительную информацию о содержимом элемента. Название атрибута, как и название тега, пишется в нижнем регистре.</p>
 	<img class="img-fluid w-75 igm my-2" src="{% static 'lessons/1/3.jpg' %}">
 	<p class="text-light">Большинство атрибутов используются только у определенных тегов. Есть лишь небольшое количество атрибутов, которые могут присутствовать в любом теге: <b>сlаss</b>, <b>id</b>, <b>lang</b>, <b>title</b>...</p>
@@ -37,11 +39,13 @@
 	<img class="img-fluid w-75 igm my-2"  src="{% static 'lessons/1/2.jpg' %}">
 	<p>
 		<ul>
-			<li class="text-light"><b>!doctype html</b> — cообщает браузеру о версии языка НТМL с помощью которой сверстана данная страница.</li>
-			<li class="text-light"><b>html</b> — между открывающим тегом html и закрывающим тегом /html располагается код всей веб-страницы.</li>
-			<li class="text-light"><b>head</b> — между открывающим тегом head и закрывающим тегом /head располагается служебная информация для браузера, которая не отображается на странице.</li>
-			<li class="text-light"><b>body</b> — между открывающим тегом body и закрывающим тегом /body располагается все отображаемое в браузере содержимое страницы.</li>
+			<li class="text-light"><b>!doctype html</b> — сообщает браузеру о версии языка html с помощью которой сверстана данная страница.</li>
+			<li class="text-light"><b>html</b> — в этом парном теге располагается код всей веб-страницы.</li>
+			<li class="text-light"><b>head</b> — в этом парном теге располагается служебная информация для браузера, которая не отображается на странице.</li>
+			<li class="text-light"><b>body</b> — в этом парном теге располагается все отображаемое в браузере содержимое страницы.</li>
 		</ul>
 	</p>
+	<img class="img-fluid w-75 igm my-2"  src="{% static 'lessons/1/-1.png' %}">
+	<p></p>
 	<button onclick="window.location.href = '../№2/';" class="btn no mb-3 px-4" role="button">Дальше</button>
 {% endblock %}
