--- a/lessons/templates/lessons/htmlOb/les-2.html
+++ b/lessons/templates/lessons/htmlOb/les-2.html
@@ -20,12 +20,20 @@
 
 {% endblock %}
 {% block body2 %}
+<p class="back-1">
+		<a class="back" href="../../../">WebSchool</a> > <a class="back" href="../../">Курсы</a> > <a class="back" href="../">HTML</a> > <span>Разметка текста</span>
+	</p>
 	<h1 class="h1 text-light">Разметка текста</h1>
 	<h2 class="h2 text-light">Заголовки</h2>
 	<h1 class="text-light fu"><b>h1...h6</b></h1>
 	<p class="text-light">Браузеры отображают содержимое заголовков разного уровня разным размером шрифта в полужирном начертании.</p>
-	<img class="img-fluid w-75 igm my-2" src="{% static 'lessons/1/7.png' %}">
-
+<!--	<img class="img-fluid w-75 igm my-2" src="{% static 'lessons/1/7.png' %}">-->
+	<h1 class="text-light">Заголовок h1</h1>
+	<h2 class="text-light">Заголовок h2</h2>
+	<h3 class="text-light">Заголовок h3</h3>
+	<h4 class="text-light">Заголовок h4</h4>
+	<h5 class="text-light">Заголовок h5</h5>
+	<h6 class="text-light mb-4">Заголовок h6</h6>
 	<h2 class="h2 text-light">Параграф (абзац) текста</h2>
 	<h1 class="text-light fu"><b>p</b></h1>
 	<p class="text-light">Браузер между несколькими следующими друг за другом абзацами оставляет свободное пространство для того, чтобы более явно разбить текст на отдельные блоки для лучшего восприятия.</p>
@@ -35,17 +43,17 @@
 		<li>
 			<h3 class="h3 text-light">Полужирное начертание</h3>
 			<h1 class="text-light fu"><b>b</b></h1>
-			<p class="text-light">Использование тега <b>b</b> приводит к тому, что слова, в него заключенные, выделяются на странице полужирным начертанием шрифта. Таким образом можно выделить какие-то ключевые слова или фразы в тексте для привлечения внимания к ним со стороны пользователя.</p>
+			<p class="text-light">Использование тега <b>b</b> приводит к тому, что слова, в него заключенные, выделяются на странице <b style="color:#F8F9FA;font-family:sans-serif;font-weight: bold;">полужирным начертанием</b> шрифта (с белым текстом это плохо видно). Таким образом можно выделить какие-то ключевые слова или фразы в тексте для привлечения внимания к ним со стороны пользователя.</p>
 		</li>
 		<li>
 			<h3 class="h3 text-light">Курсивное начертание</h3>
 			<h1 class="text-light fu"><b>i</b></h1>
-			<p class="text-light">Текст, оформленный с помощью тега <b>i</b>, отображается в курсивном начертании. Этот тег используют не для привлечения внимания пользователя, а для выделения в тексте технических и научных терминов.</p>
+			<p class="text-light">Текст, оформленный с помощью тега <b>i</b>, отображается в <i>курсивном начертании</i>. Этот тег используют не для привлечения внимания пользователя, а для выделения в тексте технических и научных терминов.</p>
 		</li>
 		<li>
 			<h3 class="h3 text-light">Маркер</h3>
 			<h1 class="text-light fu"><b>mark</b></h1>
-			<p class="text-light">Выделяет текст. В браузере фоновый цвет текста внутри <b>mark</b> будет жёлтым цветом.</p>
+			<p class="text-light">Выделяет текст. В браузере фоновый цвет текста внутри <b>mark</b> будет <mark>жёлтым</mark> (без стилей).</p>
 
 		</li>
 	</ul>
@@ -55,12 +63,11 @@
 	<h1 class="text-light fu"><b>hr</b></h1>
 	<p class="text-light">Тег <b>hr</b> добавляет на страницу горизонтальную линию.</p>
 
-
 	<h2 class="h2 text-light">Верхний и нижний индексы</h2>
 	<h1 class="text-light fu"><b>sup</b></h1>
-	<p class="text-light">Текст внутри тега <b>suр</b> отображается на странице как верхний индекс.</p>
+	<p class="text-light">Текст внутри тега <sup><b>suр</b></sup> отображается на странице как верхний индекс.</p>
 	<h1 class="text-light fu"><b>sub</b></h1>
-	<p class="text-light">Текст внутри тега <b>sub</b> отображается на странице как нижний индекс.</p>
+	<p class="text-light">Текст внутри тега <sub><b>sub</b></sub> отображается на странице как нижний индекс.</p>
 	<button onclick="window.location.href = '../№3/';" class="btn no mb-3 px-4" role="button">Дальше</button>
 
 
