--- a/lessons/templates/lessons/htmlOb/les-9.html
+++ b/lessons/templates/lessons/htmlOb/les-9.html
@@ -18,6 +18,9 @@
 
 {% endblock %}
 {% block body2 %}
+<p class="back-1">
+		<a class="back" href="../../../">WebSchool</a> > <a class="back" href="../../">Курсы</a> > <a class="back" href="../">HTML</a> > <span>Изображения</span>
+	</p>
 	<h1 class="h1 text-light">Изображения</h1>
 	<h1 class="fu text-light"><b>picture</b></h1>
 	<p class=" text-light">Контейнер для хранения нескольких элементов <b>source</b>, которые поддерживают элемент <b>img</b>. Этот элемент позволяет указывать разные изображения с учётом размера экрана, диоганалей, формата изображения и других параметров. Вот несколько областей применения <b>picture</b>:</p>
@@ -27,6 +30,7 @@
 		<li>выводить изображение в векторном формате SVG, a для браузеров, его не поддерживающих, показывать РNG.</li>
 	</ul>
 	<p class=" text-light">Внутри <b>рicture</b> cодержится ноль или несколько элементов <b>source</b>, которые идут перед одним элементом <b>img</b>.</p>
+	<p class=" text-light">Можно отображать изображения и через один только <b>img</b></p>
 	<img class="img-fluid w-75 igm my-2" src="{% static 'lessons/1/p29.png' %}">
 	<div class="mt-2"></div>
 	<button onclick="window.location.href = '../№10/';" class="btn no mb-3 px-4" role="button">Дальше</button>
