--- a/lessons/templates/lessons/htmlOb/sha-les.html
+++ b/lessons/templates/lessons/htmlOb/sha-les.html
@@ -28,7 +28,7 @@
 			  <a class="nav-link" href="../../">Курсы</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Личный кабинет</a>
+			  <a class="nav-link" href="../../../user/lk" tabindex="-1" aria-disabled="true">Личный кабинет</a>
 			</li>
 		  </ul>
 		  <form>
@@ -39,6 +39,7 @@
 	</nav>
     <script type="text/javascript"> (function(m,e,t,r,i,k,a){ m[i]=m[i]||function(){ (m[i].a=m[i].a||[]).push(arguments) }; m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)}) (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(67718821, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); </script> <noscript><div><img src="https://mc.yandex.ru/watch/67718821" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.bundle.min.js"></script>
+	{% block body3 %}{% endblock %}
 	<div class="container pt-5">
 		<div class="row pt-5">
 				<div class="col-md-3 mmm">
