--- a/lessons/templates/lessons/htmlOb/test-2.html
+++ b/lessons/templates/lessons/htmlOb/test-2.html
@@ -10,6 +10,9 @@
 
 {% endblock %}
 {% block body2 %}
+<p class="back-1">
+		<a class="back" href="../../../">WebSchool</a> > <a class="back" href="../../">Курсы</a> > <a class="back" href="../">HTML</a> > <span>Не самый простой тест</span>
+	</p>
 <div class="nach text-light text-center">
 	<h1 class="h1 mb-3">Не самый простой тест</h1>
 	<button onclick="Start()" class="btn mx-auto btn-success mb-3 px-4" role="button">Начать</button>
