--- a/lessons/templates/lessons/htmlOb/test-3.html
+++ b/lessons/templates/lessons/htmlOb/test-3.html
@@ -10,8 +10,11 @@
 
 {% endblock %}
 {% block body2 %}
+<p class="back-1">
+		<a class="back" href="../../../">WebSchool</a> > <a class="back" href="../../">Курсы</a> > <a class="back" href="../">HTML</a> > <span>Сложный тест</span>
+	</p>
 <div class="nach text-light text-center">
-	<h1 class="h1 mb-3">К сожалению вопросы токого уровня слишком сложны даже для создателя этого сайта.</h1>
+	<h1 class="h1 mt-2">Скоро</h1>
 <!--	<button onclick="Start()" class="btn mx-auto btn-success mb-3 px-4" role="button">Начать</button>-->
 
 </div>
