--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -9,39 +9,43 @@
   <div class="row justify-content-center text-light">
     <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-      <p class="text-center h1 fw-bold mb-5 mt-4">Регистрация</p>
+      <p class="text-center h1 fw-bold mb-3 mt-5">Регистрация</p>
 
       <form method="post">
         {% csrf_token %}
         <div class="d-flex flex-row align-items-center mb-4">
           <i class="fas fa-user fa-lg me-3 fa-fw"></i>
           <div class="form-outline flex-fill mb-0">
-            <input type="text" id="form3Example1c" class="form-control">
-            <label class="form-label" for="form3Example1c" style="margin-left: 0px;">Имя пользователя</label>
+            <label class="form-label"  style="margin-left: 0px;margin-bottom: 0px;">Имя пользователя</label>
+            {{ form.username }}
+
           <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 71.2px;"></div><div class="form-notch-trailing"></div></div></div>
         </div>
 
         <div class="d-flex flex-row align-items-center mb-4">
           <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
           <div class="form-outline flex-fill mb-0">
-            <input type="email" id="form3Example3c" class="form-control">
-            <label class="form-label" for="form3Example3c" style="margin-left: 0px;">Ваша почта</label>
+            <label class="form-label"  style="margin-left: 0px;margin-bottom: 0px;">Ваша почта</label>
+            {{ form.email }}
+
           <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 68.8px;"></div><div class="form-notch-trailing"></div></div></div>
         </div>
 
         <div class="d-flex flex-row align-items-center mb-4">
           <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
           <div class="form-outline flex-fill mb-0">
-            <input type="password" id="form3Example4c" class="form-control">
-            <label class="form-label" for="form3Example4c" style="margin-left: 0px;">Пароль</label>
+            <label class="form-label"  style="margin-left: 0px;margin-bottom: 0px;">Пароль</label>
+            {{form.password1}}
+
           <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 64.8px;"></div><div class="form-notch-trailing"></div></div></div>
         </div>
 
         <div class="d-flex flex-row align-items-center mb-4">
           <i class="fas fa-key fa-lg me-3 fa-fw"></i>
           <div class="form-outline flex-fill mb-0">
-            <input type="password" id="form3Example4cd" class="form-control">
-            <label class="form-label" for="form3Example4cd" style="margin-left: 0px;">Подтверждение пароля</label>
+            <label class="form-label"  style="margin-left: 0px;margin-bottom: 0px;">Подтверждение пароля</label>
+            {{form.password2}}
+
           <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 134.4px;"></div><div class="form-notch-trailing"></div></div></div>
         </div>
 
